--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; color: chocolate;
 }
 
 h5 {
@@ -7,5 +7,5 @@ h5 {
 } 
 
 p {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: monospace; color: rgb(44, 13, 88);
 }
